components/ra/user-claims-frontend/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-claims-frontend
spec:
  replicas: 1
  template:
    metadata:
      annotations:
        co.elastic.logs/processors.add_fields.target: ""
        co.elastic.logs/processors.add_fields.fields.application.name: "user-claims-frontend"
        co.elastic.logs/processors.add_fields.fields.application.domain: "user-claims"
        co.elastic.logs/processors.add_fields.fields.application.tier: web
        co.elastic.logs/processors.add_fields.fields.application.language: "typescript"
        # Extract log_level, class, and log_message as separate fields for elastic
        co.elastic.logs/processors.dissect.tokenizer: "%{?date} %{?time} %{log_level->} %{log_message}"
        co.elastic.logs/processors.dissect.target_prefix: ""
        co.elastic.logs/multiline.pattern: "^[0-9]{4}-[0-9]{2}-[0-9]{2}"
        co.elastic.logs/multiline.negate: "true"
        co.elastic.logs/multiline.match: "after"
    spec:
      containers:
        - name: user-claims-frontend
          imagePullPolicy: Always
          ports:
            - containerPort: 6011
      imagePullSecrets:
        - name: registry-creds
      volumes:
        - name: env-config
          secret:
            secretName: user-claims-frontend
